[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Ressources/BackScreen/AccueilMenu.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Fonts/PixelFontTresPetit.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 602.0
texture = ExtResource( 2 )

[node name="Train" type="Button" parent="."]
margin_left = 52.4044
margin_top = 42.0132
margin_right = 320.404
margin_bottom = 122.013
flat = true

[node name="Label" type="Label" parent="Train"]
margin_left = 17.4534
margin_top = 22.2134
margin_right = 248.453
margin_bottom = 52.2134
custom_fonts/font = ExtResource( 3 )
text = "S'entrainer"

[node name="Option" type="Button" parent="."]
margin_left = 47.0112
margin_top = 479.549
margin_right = 315.011
margin_bottom = 559.549
flat = true

[node name="Label2" type="Label" parent="Option"]
margin_left = 49.1868
margin_top = 30.1468
margin_right = 272.187
margin_bottom = 60.1468
custom_fonts/font = ExtResource( 3 )
text = "OPTIONS"

[node name="Start" type="Button" parent="."]
margin_left = 598.212
margin_top = 106.999
margin_right = 866.212
margin_bottom = 186.999
rect_scale = Vector2( 1.52425, 1.52425 )
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="Start"]
margin_left = 13.1223
margin_top = 28.9379
margin_right = 260.122
margin_bottom = 58.9379
custom_fonts/font = ExtResource( 3 )
text = "Commencons"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510.842, 302.136 )
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Train" to="." method="_on_Train_pressed"]
[connection signal="pressed" from="Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
